Polish embeded map for appearance and seo

--- a/index.html
+++ b/index.html
@@ -437,8 +437,11 @@
             title="POSH location map" 
             loading="lazy" 
             referrerpolicy="no-referrer-when-downgrade"
-            src="https://www.google.com/maps?q=503+E+1st+St+Newberg+OR+97132&output=embed">
+            src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d2796.7263531720903!2d-122.97427!3d45.30001!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x54950ff91238b7c9%3A0xd41e8c3bf34bef13!2s503%20E%201st%20St%2C%20Newberg%2C%20OR%2097132!5e0!3m2!1sen!2sus!4v1699917612345"
+            style="border:0;" 
+            allowfullscreen="">
           </iframe>
+
         </div>
       </aside>
     </div>
