Add knowsAbout section in ld json

--- a/index.html
+++ b/index.html
@@ -69,7 +69,9 @@
           "latitude": 45.301000,
           "longitude": -122.970204
         },
+        
         "priceRange": "$$",
+
         "openingHoursSpecification": [
           {
             "@type": "OpeningHoursSpecification",
@@ -83,7 +85,28 @@
             "closes": "18:00"
           }
         ],
-    
+
+        "knowsAbout": [
+          "hair salon",
+          "women's haircuts",
+          "men's haircuts",
+          "hair color",
+          "balayage",
+          "blonding",
+          "highlights",
+          "hair styling",
+          "facials",
+          "brows and lashes",
+          "advanced esthetics",
+          "botox injections",
+          "cosmetic injectables",
+          "nurse injector",
+          "salon suite rentals",
+          "independent beauty professionals",
+          "Newberg Oregon salon",
+          "Newberg Oregon spa"
+        ],
+
         "founder": {
           "@type": "Person",
           "name": "Cyndie Phillips"
